[gd_scene load_steps=16 format=3 uid="uid://d1p66onp0vo8q"]

[ext_resource type="PackedScene" uid="uid://bm648mhyelmcf" path="res://arm.glb" id="1_l83x4"]
[ext_resource type="Script" path="res://player.gd" id="2_ww2fj"]
[ext_resource type="Material" uid="uid://h8pq8gmwkodk" path="res://arm.tres" id="3_gi3u4"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v7g5x"]
radius = 0.75

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p4uex"]
animation = &"grab"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qrele"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y0xt7"]
animation = &"letgo"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xsb0u"]
animation = &"pickup"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vj146"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4rq6x"]
advance_mode = 2
advance_condition = &"grab"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uidv7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0htro"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1crx1"]
advance_mode = 2
advance_condition = &"drop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7j80g"]
xfade_time = 0.5
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_q4ci6"]
states/End/position = Vector2(599, 100)
states/grab/node = SubResource("AnimationNodeAnimation_p4uex")
states/grab/position = Vector2(322, 32)
states/idle/node = SubResource("AnimationNodeAnimation_qrele")
states/idle/position = Vector2(392, 100)
states/letgo/node = SubResource("AnimationNodeAnimation_y0xt7")
states/letgo/position = Vector2(392, 196)
states/pickup/node = SubResource("AnimationNodeAnimation_xsb0u")
states/pickup/position = Vector2(458, 32)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_vj146"), "idle", "grab", SubResource("AnimationNodeStateMachineTransition_4rq6x"), "grab", "pickup", SubResource("AnimationNodeStateMachineTransition_uidv7"), "pickup", "idle", SubResource("AnimationNodeStateMachineTransition_0htro"), "idle", "letgo", SubResource("AnimationNodeStateMachineTransition_1crx1"), "letgo", "idle", SubResource("AnimationNodeStateMachineTransition_7j80g")]
graph_offset = Vector2(-511, -17)

[node name="arm" instance=ExtResource("1_l83x4")]
script = ExtResource("2_ww2fj")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/rotation = Quaternion(0.0235931, 1.19176e-07, 2.81251e-09, 0.999722)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.0459661, -9.72478e-08, -6.53722e-09, 0.998943)
bones/2/rotation = Quaternion(-0.00241425, -1.0946e-14, 5.97526e-17, 0.999997)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.724425, -2.09596e-07, -1.88582e-07, 0.689354)
bones/4/rotation = Quaternion(0.92388, -0.382683, -2.24404e-07, 1.20131e-07)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(0.92388, 0.382683, -2.38171e-07, -1.20131e-07)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(0.707107, -2.21973e-07, -2.21973e-07, 0.707107)
bones/7/rotation = Quaternion(0.707107, -2.21973e-07, -2.21973e-07, 0.707107)
bones/8/rotation = Quaternion(-0.707107, 0, 0, 0.707107)

[node name="Cube_002" parent="Armature/Skeleton3D" index="0"]
material_override = ExtResource("3_gi3u4")

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(1, -4.40536e-13, -5.6426e-07, -5.6426e-07, 1.19209e-07, -1, 4.61853e-13, 1, 1.19209e-07, 1.04236e-13, 3.99964, 1.73002e-05)
bone_name = "armend"
bone_idx = 3

[node name="grabAnchor" type="Node3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="0"]
transform = Transform3D(1, 6.34735e-15, -6.46011e-15, 1.28144e-14, 1, 2.98023e-08, 1.37303e-13, 0, 1, 1.75706e-07, -0.379524, 0.0230479)

[node name="areaTrigger" type="Area3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/BoneAttachment3D/areaTrigger" index="0"]
transform = Transform3D(1, 1.75098e-14, -7.10096e-15, 3.58514e-14, 1, 2.98023e-08, -1.38115e-14, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_v7g5x")

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeStateMachine_q4ci6")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/drop = false
parameters/conditions/grab = false

[connection signal="animation_finished" from="AnimationTree" to="." method="_animation_changed"]
